--- a/steps/cart/templates/cart/detail.html
+++ b/steps/cart/templates/cart/detail.html
@@ -32,7 +32,7 @@
                     </td>
                     <td>{{ product.name }}</td>
                     <td>{{ item.quantity }}
-                    <select name="quantity" id="id_quantity">#}
+                    <select name="quantity" id="id_quantity">}
                         {% for i in range( item.quantity ) %}
 {#                        {% for i in "1234567" %}#}
                             <option value={{ i }}> {{ i }}</option>
